<resources>
    <string name="app_name" translatable="false">Github Mobile</string>
    <string name="my_name">Aditya Davin Pradana</string>
    <string name="my_username">DavinPr</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repositories">Repositories</string>
    <string name="favorite">Favorite</string>

    <string name="search">Search</string>
    <string name="search_on_github">Search on Github</string>
    <string name="no_name">No Name</string>
    <string name="n_a">N/A</string>
    <string name="starred">Starred</string>
    <string name="bio">Bio</string>
    <string name="blog">Blog</string>
    <string name="gist">Gists</string>
    <string name="open_in_github">Open in Github</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="error_text">Something went wrong</string>
    <string name="data_empty">No data found</string>
    <string name="search_text">Searching for \"%1$s\"</string>
    <string name="app_tag">Check out anyone on github. Let\'s start looking for someone in github!</string>
    <string name="recent_search">Recent search</string>
    <string name="recent_empty_message">It looks like you haven\'t seen anyone yet</string>
    <string name="title_activity_settings">Settings</string>

    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="language_key" translatable="false">language</string>
    <string name="inserted_data">Insert user into favorite</string>
    <string name="delete_data">Delete user from favorite</string>
    <string name="reminder_title" translatable="false">Github Mobile</string>
    <string name="reminder_message">Let\'s find someone in github!</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_summary">App will remind you at 09.00</string>
    <string name="night_mode_key" translatable="false">night_mode</string>
    <string name="daily_reminder_key" translatable="false">daily_reminder</string>
    <string name="top_user">Top user</string>
    <string name="_99k_followers" translatable="false">99k followers</string>
    <string name="load_more">Load more</string>
</resources>