<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_name"
        style="@style/Theme.GithubMobile.Text.Semibold.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/my_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_username"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_username"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/detail_name"
        app:layout_constraintStart_toStartOf="@+id/detail_name"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <View
        android:id="@+id/view2"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/icon_background"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_username" />

    <TextView
        android:id="@+id/detail_followers"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view2" />

    <TextView
        android:id="@+id/detail_following"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/detail_company"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/company"
        app:drawableStartCompat="@drawable/ic_work"
        app:layout_constraintTop_toBottomOf="@+id/detail_followers" />

    <TextView
        android:id="@+id/detail_location"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/location"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="@+id/detail_company"
        app:layout_constraintStart_toStartOf="@+id/detail_company"
        app:layout_constraintTop_toBottomOf="@+id/detail_company" />

    <TextView
        android:id="@+id/detail_repository"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/repository"
        app:drawableStartCompat="@drawable/ic_repo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_location"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

</androidx.constraintlayout.widget.ConstraintLayout>