<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar_placeholder"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|bottom"
        android:src="#7F000000"
        android:layout_marginTop="16dp"
        app:civ_border_color="@color/gray"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_name_placeholder"
        style="@style/Theme.GithubMobile.Text.Semibold.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/no_name"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        android:backgroundTint="#7F000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar_placeholder" />

    <TextView
        android:id="@+id/detail_username_placeholder"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_username"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/detail_name_placeholder"
        app:layout_constraintStart_toStartOf="@+id/detail_name_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_placeholder" />

    <View
        android:id="@+id/view2_placeholder"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/icon_background"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_username_placeholder" />

    <TextView
        android:id="@+id/detail_followers_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:maxLines="1"
        android:text="@string/followers"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/view2_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/view2_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view2_placeholder" />

    <TextView
        android:id="@+id/detail_following_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/following"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/view2_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2_placeholder"
        app:layout_constraintTop_toTopOf="@+id/view2_placeholder" />

    <TextView
        android:id="@+id/detail_bio_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/detail_following_placeholder"
        app:layout_constraintStart_toStartOf="@+id/detail_followers_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_following_placeholder" />

    <TextView
        android:id="@+id/detail_company_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        android:layout_marginTop="8dp"
        android:text="@string/company"
        app:layout_constraintStart_toStartOf="@+id/detail_bio_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_bio_placeholder" />

    <TextView
        android:id="@+id/detail_blog_placeholder"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textColor="#00FFFFFF"
        android:text="@string/blog"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintStart_toStartOf="@+id/detail_company_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_company_placeholder" />

    <TextView
        android:id="@+id/detail_location_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@+id/detail_blog_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_blog_placeholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_text_placeholder"
        android:backgroundTint="#7F000000"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textColor="#00FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/detail_bio_placeholder"
        app:layout_constraintStart_toStartOf="@+id/detail_location_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_location_placeholder" />

    <View
        android:id="@+id/divider_line2_placeholder"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/light_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn"
        />

    <TextView
        android:id="@+id/tv_repo_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/repositories"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/detail_repository_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_repository_placeholder" />

    <TextView
        android:id="@+id/detail_repository_placeholder"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
         android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_line2_placeholder" />

    <TextView
        android:id="@+id/tv_star_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/starred"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/detail_starred_placeholder"
        app:layout_constraintStart_toStartOf="@+id/tv_repo_placeholder"
        app:layout_constraintTop_toTopOf="@+id/detail_starred_placeholder" />

    <TextView
        android:id="@+id/detail_starred_placeholder"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/n_a"
         android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/detail_repository_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_repository_placeholder" />

    <TextView
        android:id="@+id/tv_gist_placeholder"
        style="@style/Theme.GithubMobile.Text.Regular.14"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/gist"
        android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/detail_gist_placeholder"
        app:layout_constraintStart_toStartOf="@+id/tv_star_placeholder"
        app:layout_constraintTop_toTopOf="@+id/detail_gist_placeholder" />

    <TextView
        android:id="@+id/detail_gist_placeholder"
        style="@style/Theme.GithubMobile.Text.Medium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/n_a"
         android:textColor="#00FFFFFF"
        android:background="@drawable/bg_text_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/detail_starred_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detail_starred_placeholder" />


</androidx.constraintlayout.widget.ConstraintLayout>